--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "chalk": "^1.0.0",
     "gulp-util": "^3.0.0",
+    "ora": "^1.3.0",
     "plur": "^2.0.0",
     "pretty-bytes": "^4.0.2",
     "stringify-object": "^3.0.0",
